@@ -8,7 +8,7 @@ View=DistUpgradeViewGtk,DistUpgradeViewKDE, DistUpgradeViewText
 # Distro contains global information about the upgrade
 [Distro]
 # the meta-pkgs we support
-MetaPkgs=ubuntu-desktop, kubuntu-desktop, edubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, ichthux-desktop, mythbuntu-desktop
+MetaPkgs=ubuntu-desktop, kubuntu-desktop, edubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, ichthux-desktop, mythbuntu-desktop, gobuntu-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 PostUpgradePurge=xorg-common, libgl1-mesa, ltsp-client, ltspfsd, python2.3
 Demotions=demoted.cfg
@@ -48,6 +48,9 @@ KeyDependencies=ichthux-artwork-usplash, ichthux-default-settings
 
 [mythbuntu-desktop]
 KeyDependencies=mythbuntu-artwork-usplash,mythbuntu-default-settings
+
+[gobuntu-desktop]
+KeyDependencies=gobuntu-artwork-usplash
 
 [Files]
 BackupExt=distUpgrade
